# F1D

./: .coveragerc  .env.example  .gitCOMMIT_MSG  .gitignore  .pre-commit-config.yaml  2026-02-19-171336-local-command-caveatcaveat-the-messages-below-w.txt  2026-02-27-143435-local-command-caveatcaveat-the-messages-below-w.txt  2026-02-27-192313-implement-the-following-plan.txt  2026-03-11-200401-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE_H9_CODEFIX_PASS_03.md  CLAUDE_H9_FINAL_PASS_06.md  CLAUDE_H9_IMPLEMENT_PASS_05.md  CLAUDE_H9_PROVENANCE_PASS_01.md  CLAUDE_H9_PROVENANCE_PASS_02.md  CLAUDE_H9_PROVENANCE_PASS_04.md  COMPLETENESS_AUDIT_REPORT.md  DEPENDENCIES.md  H13.txt  H14.txt  H4_RESULTS_INTERPRETATION.md  LICENSE  NewHspec.txt  README.md  README_AUDIT.md  SCALING.md  SECURITY.md  UPGRADE_GUIDE.md  draft template.md  pyproject.toml  requirements.txt  spec_addendum.txt  test_ibes.py  type_errors_baseline.txt  type_errors_summary.md  variable definitions spec.md  verify_outputs.py
.___archive/: manifest.json
.___archive/backups/: README.md
.___archive/debug/: README.md
.___archive/docs/: CEOroles.txt  CEOtoCALL.md  CLARITY_FIXED_EFFECT_EXPLANATION.md  DATA_COVERAGE_EXPLANATION.md  DEPENDENCIES.md  Dataset_Schema.md  F1D_SPEC.md  FIXES_APPLIED_2025-12-08.md  HARMONIZATION_MAP.md  INVESTIGATION_CEO_MATCH.md  INVESTIGATION_SUMMARY.md  Master_tenure.md  Measures_Catalog.md  README copy.md  README.md  README_FIXES_SUMMARY_2025-12-09.md  REGRESSION_INTERPRETATION.md  STEP_2.7_DATA_COVERAGE_ANALYSIS.md  SURPRISE_KINEMATICS_EXPLANATION.md  VARIABLE_COMPARISON_REPORT.md  VERIFICATION_REPORT.md  blueprint_step1.md  coverage_investigation.txt  debug_output.txt  files_list.txt  interpretation_2.8.txt  linguistic_entropy.md  plan_step_2_5c.md  prd.md  questions.md  sample_output.md  schema_output.md  spec 4.4.txt  step_2.9_plan.md  step_2.9_walkthrough.md  step_2.9c_kinematics_plan.md  test_output.txt  verification_results.txt
.___archive/legacy/: 2.2v2d_ResortByYearQuarter.py  README.md  _____________________Archive__2.2_ExtractQaManagerDocs  generate_report.py  inspect_excel.py  inspect_excel_clean.py  test_entire_call.py
.___archive/test_outputs/: README.md
.claude/: ralph-loop.local.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  test.yml
.planning/: H10_REVISION_PLAN_v2.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  ROADMAP.md.backup  ROADMAP_V3.md  STATE.md  STATE.md.tmp.25296.1770424496295  TECHNICAL_REMEDIATION_ROADMAP.md  TECHNICAL_REMEDIATION_SUMMARY.md  config.json  folder-rename-plan.md  v1.0.0-MILESTONE-AUDIT.md  v1.2.0-MILESTONE-AUDIT.md  v1.3.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md  v6.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CODE_QUALITY.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  MANUAL_NOTES.md  STACK.md  STRUCTURE.md  TECH_STACK.md  TESTING.md  all_type_ignores.txt  construct_variables_errors_analysis.txt  financial_errors_analysis.txt  mypy_errors_initial.txt  mypy_final_baseline.txt  mypy_final_summary.md  stats_errors_analysis.txt  takeover_hazards_errors_analysis.txt  type_ignore_audit.md  verify_step2_errors_analysis.txt
.planning/debug/: category-hit-rates-bug.md
.planning/milestones/: v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v6.1-REQUIREMENTS.md  v6.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  STACK_HypothesisTesting.md  SUMMARY.md
.planning/verification/: 79-audit-report.json  79-audit-report.md  79-data-profile.json  79-dry-run-results.json  79-execution-audit.json  79-schema-validation.json  79-standards-audit.json  80-audit-report.json  80-audit-report.md  80-data-profile.json  80-dry-run-results.json  80-execution-audit.json  80-schema-validation.json  80-standards-audit.json  81-audit-report.json  81-audit-report.md  81-data-profile.json  81-dry-run-results.json  81-execution-audit.json  81-schema-validation.json  81-standards-audit.json  82-takeover-audit.json  Stage1-Sample-UAT.md  V2-Pipeline-Audit-Report.md
2_Scripts/: 12-02-PLAN.md  2.0_ValidateV2Structure.py  2.3_Report.py  SCALING.md
2_Scripts/12-data-quality-observability/: 12-03-SUMMARY.md
2_Scripts/1_Sample/: 1.0_BuildSampleManifest.py  1.1_CleanMetadata.py  1.2_LinkEntities.py  1.3_BuildTenureMap.py  1.4_AssembleManifest.py  1.5_Utils.py  README.md
2_Scripts/2_Text/: 2.1_TokenizeAndCount.py  2.2_ConstructVariables.py  2.3_Report.py  2.3_VerifyStep2.py  README.md
2_Scripts/3_Financial/: 3.0_BuildFinancialFeatures.py  3.1_FirmControls.py  3.2_MarketVariables.py  3.3_EventFlags.py  3.4_Utils.py  README.md
2_Scripts/3_Financial_V2/: 3.10_H2_PRiskUncertaintyMerge.py  3.11_H9_StyleFrozen.py  3.12_H9_PRiskFY.py  3.13_H9_AbnormalInvestment.py  3.1_H1Variables.py  3.2_H2Variables.py  3.2a_AnalystDispersionPatch.py  3.3_H3Variables.py  3.5_H5Variables.py  3.6_H6Variables.py  3.7_H7IlliquidityVariables.py  3.8_H8TakeoverVariables.py  3.9_H2_BiddleInvestmentResidual.py  README.md
2_Scripts/3_Financial_V3/: 4.1_H2_BiddleInvestmentResidual.py  4.2_H2_PRiskUncertaintyMerge.py
2_Scripts/4_Econometric/: 4.1.1_EstimateCeoClarity_CeoSpecific.py  4.1.2_EstimateCeoClarity_Extended.py  README.md  (+6 more)
Docs/: presentation_portable.html
config/: project.yaml  project.yaml.backup  variables.yaml
docs/: ARCHITECTURE_STANDARD.md  Audit.txt  CODE_QUALITY_STANDARD.md  CONFIG_TESTING_STANDARD.md  DEPENDENCIES.md  DOCSTRING_COMPLIANCE.md  DOC_TOOLING_STANDARD.md  H01_MANAGER_CLARITY_DOCUMENTATION.md  H02_CEO_CLARITY_DOCUMENTATION.md  H02_COMPLETE_TABLE.tex  H03_CEO_CLARITY_EXTENDED_DOCUMENTATION.md  H03_COMPLETE_LATEX_TABLE.tex  H10_TONE_AT_TOP_DOCUMENTATION.md  H15.txt  H15_VARIABLE_MAPPING.md  Referee_Round_1_H10.txt  SCRIPT_DOCSTANDARD.md  STAGE3_4_REFACTOR_PROGRESS.md  STAGE3_4_REWRITE_PLAN.md  STAGE3_4_REWRITE_PLAN.md.completed  TIER_MANIFEST.md  UPGRADE_GUIDE.md  VARIABLE_CATALOG_V1.md  VARIABLE_CATALOG_V2_V3.md
logs/: .gitkeep
scripts/: compute_missing_sumstats.py
tests/: conftest.py
(+1652 files in other folders)
