[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1d"
version = "6.0.0"
description = "F1D Data Processing Pipeline for CEO Uncertainty Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Thesis Author"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",  # Show extra test summary info
    "-q",   # Quiet mode (less output)
    "--strict-markers",  # Error on unknown markers
    "--strict-config",   # Error on invalid config options
    "--import-mode=importlib",  # Use importlib for import mode (recommended)
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end pipeline tests",
    "performance: marks tests as performance regression tests",
    "mypy_testing: marks tests for mypy type checking",
]

[tool.coverage.run]
source = ["src/f1d"]
branch = true  # Enable branch coverage
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ARCHIVE*/*",
    "*/ARCHIVE_OLD*/*",
    "*/V1*",  # Exclude V1 scripts from coverage calculation
]

[tool.coverage.report]
# Minimum coverage required (fail_under in pyproject.toml uses overall threshold)
# Tier 1 (critical): 90%+ for financial_utils, panel_ols, iv_regression
# Tier 2 (important): 80%+ for data_validation, path_utils, chunked_reader
# Overall minimum: 60% (baseline for entire codebase)
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2  # Report coverage to 2 decimal places
skip_empty = true  # Don't fail on files with no code
show_missing = true  # Show missing lines in report

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
# Same line length as Black (default)
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), isort (I), and basic errors
select = ["E4", "E7", "E9", "F", "B", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

# Allow auto-fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # Import violations
".___archive/**" = ["ALL"]  # Ignore archived code
"tests/**" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false  # Now we have stubs for linearmodels
check_untyped_defs = true

# Progressive rollout: exclude most scripts initially
exclude = [
    "2_Scripts/[^s]*",  # Exclude all non-shared scripts
    "tests/",
    ".___archive/",
]

# Add stubs to search path
mypy_path = "$MYPY_CONFIG_FILE_DIR/2_Scripts/stubs"

# Follow imports for type checking
follow_imports = "normal"

# Disable incremental mode initially to get fresh results
# no_incremental = true  # Uncomment for debugging

# Warnings to ignore for progressive adoption
disable_error_code = [
    "no-untyped-def",      # Allow untyped functions in old code
    "no-untyped-call",      # Allow calls to untyped functions
]

# Enable strict mode for new shared modules only
[[tool.mypy.overrides]]
module = "f1d.shared.observability.*"
strict = true

# Gradually enable stricter checking for typed modules
[[tool.mypy.overrides]]
module = "f1d.shared.panel_ols"
warn_return_any = false  # Too strict for gradual adoption
disallow_untyped_defs = false  # Allow untyped defs initially

[[tool.mypy.overrides]]
module = "f1d.shared.iv_regression"
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "f1d.shared.financial_utils"
warn_return_any = false
disallow_untyped_defs = false
