[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1d"
version = "6.0.0"
description = "F1D Data Processing Pipeline for CEO Uncertainty Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Thesis Author"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",  # Show extra test summary info
    "-q",   # Quiet mode (less output)
    "--strict-markers",  # Error on unknown markers
    "--strict-config",   # Error on invalid config options
    "--import-mode=importlib",  # Use importlib for import mode (recommended)
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end pipeline tests",
    "performance: marks tests as performance regression tests",
    "mypy_testing: marks tests for mypy type checking",
]

[tool.coverage.run]
source = ["src/f1d"]
branch = true  # Enable branch coverage
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ARCHIVE*/*",
    "*/ARCHIVE_OLD*/*",
    "*/V1*",  # Exclude V1 scripts from coverage calculation
]

[tool.coverage.report]
# Minimum coverage required (fail_under in pyproject.toml uses overall threshold)
# Tier 1 (critical): 90%+ for financial_utils, panel_ols, iv_regression
# Tier 2 (important): 80%+ for data_validation, path_utils, chunked_reader
# Overall minimum: 60% (baseline for entire codebase)
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2  # Report coverage to 2 decimal places
skip_empty = true  # Don't fail on files with no code
show_missing = true  # Show missing lines in report

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
# Same line length as Black (default)
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), isort (I), and basic errors
select = ["E4", "E7", "E9", "F", "B", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

# Allow auto-fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # Import violations
".___archive/**" = ["ALL"]  # Ignore archived code
"tests/**" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# mypy Configuration (TYPE-03: Tier-based strictness)
# ==============================================================================
# See: docs/CODE_QUALITY_STANDARD.md Section 3.2

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true

# Path configuration - use src-layout
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

# Follow imports for type checking
follow_imports = "normal"

# Show error codes for easier fixing
show_error_codes = true

# Pretty output for better readability
pretty = true

# Exclusions
exclude = [
    "tests/",
    ".___archive/",
    "2_Scripts/",  # Legacy scripts not in src-layout
]

# ==============================================================================
# Tier 1: Core Shared Modules (100% coverage, strict mode)
# ==============================================================================
[[tool.mypy.overrides]]
module = ["f1d.shared.*"]
strict = true
# Note: strict = true enables all strict mode flags automatically
# Ignore missing type stubs for pandas/numpy (common limitation)
ignore_missing_imports = true

# ==============================================================================
# Tier 2: Stage-Specific Modules (80%+ coverage, moderate mode)
# ==============================================================================
[[tool.mypy.overrides]]
module = [
    "f1d.sample.*",
    "f1d.text.*",
    "f1d.financial.*",
    "f1d.econometric.*",
]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
warn_return_any = false
allow_untyped_defs = true

# Allow some flexibility for complex pandas operations
allow_any_expr = true
allow_any_unimported = true

# Ignore common decorator and dynamic import issues in stage modules
warn_unused_ignores = false
ignore_missing_imports = true

# ==============================================================================
# Third-Party Libraries (ignore missing type stubs)
# ==============================================================================
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "linearmodels.*",
    "scipy.*",
    "statsmodels.*",
    "yaml.*",
    "psutil.*",
    "pyarrow.*",
]
ignore_missing_imports = true
