[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1d"
version = "6.0.0"
description = "F1D Data Processing Pipeline for CEO Uncertainty Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Thesis Author"}
]
keywords = [
    "thesis",
    "data-processing",
    "finance",
    "earnings-calls",
    "text-analysis",
    "econometrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "structlog>=25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pandera>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "pre-commit>=3.8",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/user/f1d"
Repository = "https://github.com/user/f1d.git"
Issues = "https://github.com/user/f1d/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",  # Show extra test summary info
    "-q",   # Quiet mode (less output)
    "--strict-markers",  # Error on unknown markers
    "--strict-config",   # Error on invalid config options
    "--import-mode=importlib",  # Use importlib for import mode (recommended)
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end pipeline tests",
    "performance: marks tests as performance regression tests",
    "mypy_testing: marks tests for mypy type checking",
]

[tool.coverage.run]
source = ["src/f1d"]
branch = true  # Enable branch coverage
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ARCHIVE*/*",
    "*/ARCHIVE_OLD*/*",
    "*/V1*",  # Exclude V1 scripts from coverage calculation
]

[tool.coverage.report]
# ==============================================================================
# Coverage Thresholds by Tier (TEST-04: CI Coverage Enforcement)
# ==============================================================================
# IMPORTANT: Coverage thresholds measure ALL modules in src/f1d/shared, not just
# the tested ones. Many modules (diagnostics, observability, regression_helpers,
# etc.) have 0% coverage because they are not tested by Tier 1/2 tests.
#
# Individual tested module coverage (for reference):
#   - financial_utils.py: 97.75%
#   - data_validation.py: 92.00%
#   - iv_regression.py: 88.21%
#   - panel_ols.py: 72.08%
#   - chunked_reader.py: 88.24%
#   - path_utils.py: 86.09%
#
# Current thresholds (measured across ALL shared modules):
#   - Tier 1 tests: 10% (tested modules have 70%+ individually)
#   - Tier 2 tests: 10% (tested modules have 80%+ individually)
#   - Overall: 30% (increased from 25% per Phase 90-03, target 40%)
#
# Note: Current coverage is ~25%. Target is 40% but setting to 30%
# for incremental improvement as more tests are added.
# ==============================================================================
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2  # Report coverage to 2 decimal places
skip_empty = true  # Don't fail on files with no code
show_missing = true  # Show missing lines in report

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
# Same line length as Black (default)
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable extended rule set per DOC_TOOLING_STANDARD.md TOOL-05
# E: pycodestyle errors, W: pycodestyle warnings
# F: pyflakes, I: isort, B: flake8-bugbear
# C4: flake8-comprehensions, UP: pyupgrade
# ARG: flake8-unused-arguments, SIM: flake8-simplify
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
]

# Allow auto-fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Import violations, unused imports
".___archive/**" = ["ALL"]  # Ignore archived code
"tests/**" = ["S101", "ARG"]  # Allow assert, unused fixtures
"2_Scripts/**" = ["ALL"]  # Legacy scripts - not enforcing

[tool.ruff.lint.isort]
known-first-party = ["f1d"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Bandit Configuration (Security Scanning)
# ==============================================================================

[tool.bandit]
exclude_dirs = [
    "tests/",
    ".___archive/",
    "2_Scripts/",  # Legacy scripts
]
skips = [
    "B101",  # Allow assert in non-test code (legacy scripts)
]

# ==============================================================================
# mypy Configuration (TYPE-03: Tier-based strictness)
# ==============================================================================
# See: docs/CODE_QUALITY_STANDARD.md Section 3.2
#
# Type stub packages installed (see requirements.txt):
# - types-pandas: Type stubs for pandas
# - types-psutil: Type stubs for psutil
# - types-requests: Type stubs for requests
# - types-PyYAML: Type stubs for PyYAML

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true

# Path configuration - use src-layout
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

# Follow imports for type checking
follow_imports = "normal"

# Show error codes for easier fixing
show_error_codes = true

# Pretty output for better readability
pretty = true

# Exclusions
exclude = [
    "tests/",
    ".___archive/",
    "2_Scripts/",  # Legacy scripts not in src-layout
]

# ==============================================================================
# Tier 1: Core Shared Modules (100% coverage, strict mode)
# ==============================================================================
[[tool.mypy.overrides]]
module = ["f1d.shared.*"]
strict = true
# Note: strict = true enables all strict mode flags automatically
# Ignore missing type stubs for pandas/numpy (common limitation)
ignore_missing_imports = true

# ==============================================================================
# Tier 2: Stage-Specific Modules (80%+ coverage, moderate mode)
# ==============================================================================
[[tool.mypy.overrides]]
module = [
    "f1d.sample.*",
    "f1d.text.*",
    "f1d.financial.*",
    "f1d.econometric.*",
]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
warn_return_any = false
allow_untyped_defs = true

# Allow some flexibility for complex pandas operations
allow_any_expr = true
allow_any_unimported = true

# Ignore common decorator and dynamic import issues in stage modules
warn_unused_ignores = false
ignore_missing_imports = true

# ==============================================================================
# Third-Party Libraries (ignore missing type stubs)
# ==============================================================================
# Note: pandas, psutil, yaml (PyYAML) now have type stubs via types-* packages
# Only ignore imports for libraries without type stubs available
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "linearmodels.*",
    "scipy.*",
    "statsmodels.*",
    "pyarrow.*",
]
ignore_missing_imports = true
